clusters/akslab2/cluster-config/app-resources/scg-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tdemo-gateway
  namespace: default
spec:
  routes:
  - services: tdemo1
    port: 80
  virtualhost:
    fqdn: tdemo.akslab2a.tap.fynesy.com
