clusters/akslab2/cluster-config/app-resources/tdemo-gateway-httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tdemo-gateway
  namespace: default
spec:
  routes:
  - services: 
    - name: tdemo-gateway
      port: 80
  virtualhost:
    fqdn: tdemo.akslab2a.tap.fynesy.com
